--- a/index.html
+++ b/index.html
@@ -7,11 +7,63 @@
     <title>Broadway</title>
 </head>
 <body>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div>
+        <h1 class="mainhead">Broadway Design</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Process</a></li>
+                <li><a href="#">Work</a></li>
+                <li><a href="#">Team</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div id="process">
+        <h2>Our Process</h2>
+        <div>
+            <img src="" alt="">
+            <h3>Identify</h3>
+            <p>We focus on the most important details.</p> 
+        </div>
+        <div>
+            <img src="" alt="">
+            <h3>Understand</h3>
+            <p>We study our projects inside and out.</p>
+        </div>
+        <img src="" alt="">
+        <h3>Execute</h3>
+        <p>We put everything we have into our work.</p>
+    </div>
+    <div>
+        <h2>Designed in New York</h2>
+    </div>
+    <div>
+        <div>
+            <h3>Portfolio</h3>
+            <p>Coming Soon</p>
+        </div>
+        <div>
+            <h3>Team</h3>
+            <p>We're Hiring!</p>
+        </div>
+        <div>
+            <h3>Contact</h3>
+            <p>Phone: (555) 555-5555</p>
+            <p>E-mail: test@example.com</p>
+            <p>Twitter: @test</p>
+        </div>
+    </div>
+    <div>
+        <nav class="bottom-nav">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Process</a></li>
+                <li><a href="#">Work</a></li>
+                <li><a href="#">Team</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
