--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
     <div id="process">
         <h2>Our Process</h2>
         <div>
-            <img src="" alt="">
+            <img src="./resources/images/identify.svg" alt="identify icon">
             <h3>Identify</h3>
             <p>We focus on the most important details.</p> 
         </div>
         <div>
-            <img src="" alt="">
+            <img src="./resources/images/understand.svg" alt="understand icon">
             <h3>Understand</h3>
             <p>We study our projects inside and out.</p>
         </div>
-        <img src="" alt="">
+        <img src="./resources/images/execute.svg" alt="execute icon">
         <h3>Execute</h3>
         <p>We put everything we have into our work.</p>
     </div>
