add background css

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./resources/css/style.css" rel="stylesheet" type="style.css">
+    <link href="./resources/css/style.css" rel="stylesheet" type="text/css">
     <title>Broadway</title>
 </head>
 <body>
-    <div>
-        <h1 class="mainhead">Broadway Design</h1>
+    <div id="main">
+        <h1>Broadway Design</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
