style all divs and text save footer

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <h3>Execute</h3>
         <p>We put everything we have into our work.</p>
     </div>
-    <div>
-        <h2>Designed in New York</h2>
+    <div id="main">
+        <h3 class="white">Designed in New York</h3>
     </div>
     <div>
         <div>
@@ -54,16 +54,17 @@
             <p>Twitter: @test</p>
         </div>
     </div>
-    <div>
-        <nav class="bottom-nav">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Process</a></li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Team</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+    <div class="footer">
+        <h4 class="white">&copy; Broadway 2016</h4>
+        <p>
+        <ul class="bottom">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Process</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">Team</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        </p>
     </div>
 </body>
 </html>
