--- a/index.html
+++ b/index.html
@@ -56,13 +56,12 @@
     </div>
     <div class="footer">
         <h4 class="white">&copy; Broadway 2016</h4>
-        <ul class="bottom">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Process</a></li>
-            <li><a href="#">Work</a></li>
-            <li><a href="#">Team</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+        <p>
+            <a href="#"><li>Home</li></a>
+            <a href="#"><li>Process</li></a>
+            <a href="#"><li>Work</li></a>
+            <a href="#"><li>Team</li></a>
+            <a href="#"><li>Contact</li></a>
         </p>
     </div>
 </body>
