display footer menu properly within <p>

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
         </div>
     </div>
     <div class="footer">
-        <h4 class="white">&copy; Broadway 2016</h4>
         <p>
-            <a href="#"><li>Home</li></a>
-            <a href="#"><li>Process</li></a>
-            <a href="#"><li>Work</li></a>
-            <a href="#"><li>Team</li></a>
-            <a href="#"><li>Contact</li></a>
+            <h4 class="white">&copy; Broadway 2016</h4>
+            <a href="#">Home</a>
+            <a href="#">Process</a>
+            <a href="#">Work</a>
+            <a href="#">Team</a>
+            <a href="#">Contact</a>
         </p>
     </div>
 </body>
